zien24_implementation/org/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Completed_At__c</fullName>
        <label>Completed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_without_VAT__c</fullName>
        <label>Price without VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>